# traiter

./: .gitignore  Cargo.toml  README.md  docker-compose.yml  setup-docker-secrets.sh
crates/api/: Cargo.toml
crates/api/src/: lib.rs  stock.rs
crates/backend/: .env  Cargo.toml  Dockerfile
crates/backend/src/: config.rs  main.rs  routes.rs  state.rs
crates/backend/src/routes/: live.rs
crates/backtest/: Cargo.toml
crates/backtest/src/: lib.rs
crates/clih/: Cargo.toml
crates/clih/src/: main.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs  market.rs  ohlcv.rs  portfolio.rs  tests.rs  time.rs
crates/data/: Cargo.toml
crates/data/src/: lib.rs  platforms.rs  providers.rs  replay.rs
crates/data/src/providers/: yahoo.rs
crates/dnn-core/: Cargo.toml
crates/dnn-core/src/: error.rs  market.rs  tests.rs  time.rs
crates/frontend/: Cargo.toml  Trunk.toml  build.rs  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
crates/frontend/js/: price_chart.js
crates/frontend/src/: app.rs  components.rs  main.rs  pages.rs
crates/frontend/src/components/: card.rs  navbar.rs  sidebar.rs
crates/frontend/src/pages/: chart_view.rs  dashboard.rs  scanner.rs  strategies.rs
crates/pricing/: Cargo.toml
crates/pricing/benches/: pricers.rs
crates/pricing/src/: lib.rs  option.rs  pricers.rs
crates/pricing/src/pricers/: black_scholes.rs  monte_carlo.rs
crates/pricing/tests/: greeks.rs  option_types.rs
crates/strats/: Cargo.toml
crates/strats/src/: buy_and_hold.rs  lib.rs  sma_cross.rs
