[package]
name = "backend"
edition.workspace = true
version.workspace = true
readme.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true

[dependencies]
api.path = "../api"
config.path = "../config"
dnn-core.path = "../dnn-core"
data.path = "../data"

anyhow.workspace = true
chrono.workspace = true
dotenvy.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

axum = { version = "0.8.4", features = ["macros", "json", "ws"] }
tokio-tungstenite = "0.27.0"
tracing-subscriber = "0.3.20"
tracing = "0.1.41"

[lints]
workspace = true
