[package]
name = "backtest"
edition.workspace = true
version.workspace = true
readme.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true

[dependencies]
dnn-core.path = "../dnn-core"
data.path = "../data"
strats.path = "../strats"

chrono.workspace = true
futures.workspace = true

[lints]
workspace = true
