[package]
name = "data"
edition.workspace = true
version.workspace = true
readme.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
api.path = "../api"

dnn-core.path = "../dnn-core"

anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
futures.workspace = true
serde.workspace = true
tokio.workspace = true
tokio-stream.workspace = true

yahoo_finance_api = "4.1.0"
log = "0.4.27"


[lints]
workspace = true
