[package]
name = "dnn-core"
edition.workspace = true
version.workspace = true
readme.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true

[dependencies]

anyhow.workspace = true
chrono.workspace = true
serde.workspace = true
thiserror.workspace = true

[lints]
workspace = true
