[package]
name = "frontend"
edition.workspace = true
version.workspace = true
readme.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true

[dependencies]
chrono.workspace = true
futures.workspace = true
serde_json.workspace = true

yew = { version = "0.21.0", features = ["csr"] }
yew-router = "0.18.0"
wasm-logger = "0.2.0"
wasm-bindgen = "0.2.101"
wasm-bindgen-futures = "0.4.34"
web-sys = { version = "0.3.78", features = ["CanvasRenderingContext2d", "HtmlCanvasElement", "HtmlDivElement"]}
gloo = "0.11.0"
serde-wasm-bindgen = "0.6.5"
js-sys = "0.3.78"

[lints]
workspace = true
